C:/Program Files/Git/

--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Step Project</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">.    <title>Step Project</title>
     <link rel="stylesheet" href="css/style.css">
     <link
             rel="stylesheet"
@@ -280,13 +280,176 @@
 
 </section>
 
-<section class="gallery-option">
+<section class="gallery-option">p</section>
 
+
+
+<section class="breaking-news">
+    <div class="section-title container">
+        <p class="section-title-text">Breaking News</p>
+        <div class="green-line "></div>
+        <div class="green-line green-line-second"></div>
+    </div>
+    <div class="breaking-news-items container">
+        <div class="breaking-news-items-row-first">
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer 47@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Image Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2050@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2051@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2052@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="breaking-news-items-row-second">
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2053@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2054@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2055@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="news-items news-item-1">
+                <a href="#">
+                    <div class="news-item-img-cal-1">
+                        <img src="img/Layer%2056@1X.png" alt="" class="news-img">
+                        <div class="calendar">
+                            <p class="calendar-day"></p>
+                            <p class="calendar-month"></p>
+                        </div>
+                    </div>
+                    <div class="news-item-text">
+                        <h3 class=" text-first">
+                            Amazing Blog Post
+                        </h3>
+                        <p class="text-second">By admin
+                            <span class="text-line">|</span> 2 comment
+                        </p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </section>
-
-
-
-
 
 
 
@@ -314,6 +477,8 @@
         <div>
             <div class="slick-bigger-items">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <h2 class="green-text">MARK ZUKERBERG</h2>
+                <p class="person-profession">Programmer</p>
                 <img src="img/Layer%207@1X.png" alt="slide-1 " class="slick-bigger-item-img">
 
             </div>
@@ -322,21 +487,29 @@
         <div>
             <div class="slick-bigger-items">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <h2 class="green-text">SABRINA DIM</h2>
+                <p class="person-profession">Web Designer</p>
                 <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
 
             </div>
         </div>
         <div>
             <div class="slick-bigger-items">
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
-                <img src="https://via.placeholder.com/600x350/228" alt="slide-1 " class="slick-bigger-item-img">
+                <h2 class="green-text">HASAN ALI</h2>
+                <p class="person-profession">UX Designer</p>
+                <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
 
             </div>
         </div>
         <div>
             <div class="slick-bigger-items">
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
-                <img src="https://via.placeholder.com/600x350/228" alt="slide-1 " class="slick-bigger-item-img">
+                <h2 class="green-text">HASAN ALI</h2>
+                <p class="person-profession">UX Designer</p>
+                <img src="img/Layer%206@1X.png" alt="slide-1 " class="slick-bigger-item-img">
 
             </div>
         </div>
@@ -348,8 +521,8 @@
         <img src="img/Layer%204@1X.png" alt="slide-4" class="slick-smaller-item">
         <img src="img/Layer%207@1X.png"  alt="slide-5" class="slick-smaller-item">
         <img src="img/Layer%208@1X.png" alt="slide-6" class="slick-smaller-item">
-        <img src="https://via.placeholder.com/156x75/f32" alt="slide-7" class="slick-smaller-item">
-        <img src="https://via.placeholder.com/157x75/f32" alt="slide-8" class="slick-smaller-item">
+        <img src="img/Layer%206@1X.png" alt="slide-7" class="slick-smaller-item">
+        <img src="img/Layer%208@1X.png" alt="slide-8" class="slick-smaller-item">
     </div>
 
 </section>
@@ -361,6 +534,6 @@
 <script src="js/slick.js"></script>
 <script src="js/script.js"></script>
 <script src="js/script2.js"></script>
-
+<script src="js/script3.js"></script>
 </body>
 </html>
