--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -280,7 +280,6 @@
 
 </section>
 
-<section class="gallery-option">p</section>
 
 
 
@@ -467,50 +466,56 @@
     <div class="slick-bigger container">
         <div>
             <div class="slick-bigger-items">
-                <p>Lorem ipsum dolor sit amet, coniam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
-               <h2 class="green-text">HASAN ALI</h2>
+                <p class="slick-about-person">Integer dignissim, augue tempus ultricies luctus, quam dui laoreet sem, non dictum odio nisi quis massa. Morbi pulvinar odio eget aliquam facilisis. Tempus ultricies luctus, quam dui laoreet sem, non dictum odio nisi quis massa. Morbi pulvinar odio eget aliquam facilisis.</p>
+                <h2 class="green-text">HASAN ALI</h2>
                 <p class="person-profession">UX Designer</p>
-                <img src="img/Layer%204@1X.png" alt="slide-1 "class="slick-bigger-item-img" >
+                <div class="img-second-border">
+                    <img src="img/Layer%204@1X.png" alt="slide-1 "class="slick-bigger-item-img" >
+                </div>
             </div>
         </div>
 
         <div>
             <div class="slick-bigger-items">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <p class="slick-about-person">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
                 <h2 class="green-text">MARK ZUKERBERG</h2>
                 <p class="person-profession">Programmer</p>
-                <img src="img/Layer%207@1X.png" alt="slide-1 " class="slick-bigger-item-img">
-
+                <div class="img-second-border">
+                    <img src="img/Layer%207@1X.png" alt="slide-1 " class="slick-bigger-item-img">
+                </div>
             </div>
         </div>
 
         <div>
             <div class="slick-bigger-items">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <p class="slick-about-person">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
                 <h2 class="green-text">SABRINA DIM</h2>
                 <p class="person-profession">Web Designer</p>
-                <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
-
+                <div class="img-second-border">
+                    <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
+                </div>
             </div>
         </div>
         <div>
             <div class="slick-bigger-items">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <p class="slick-about-person">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
                 <h2 class="green-text">HASAN ALI</h2>
                 <p class="person-profession">UX Designer</p>
-                <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
-
+                <div class="img-second-border">
+                    <img src="img/Layer%206@1X.png" alt="slide-1 " class="slick-bigger-item-img">
+                </div>
             </div>
         </div>
         <div>
             <div class="slick-bigger-items">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <p class="slick-about-person">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
                 <h2 class="green-text">HASAN ALI</h2>
                 <p class="person-profession">UX Designer</p>
-                <img src="img/Layer%206@1X.png" alt="slide-1 " class="slick-bigger-item-img">
-
+                <div class="img-second-border">
+                    <img src="img/download.jpg" alt="slide-1 " class="slick-bigger-item-img">
+                </div>
             </div>
         </div>
 
@@ -522,18 +527,17 @@
         <img src="img/Layer%207@1X.png"  alt="slide-5" class="slick-smaller-item">
         <img src="img/Layer%208@1X.png" alt="slide-6" class="slick-smaller-item">
         <img src="img/Layer%206@1X.png" alt="slide-7" class="slick-smaller-item">
-        <img src="img/Layer%208@1X.png" alt="slide-8" class="slick-smaller-item">
+        <img src="img/download.jpg" alt="slide-8" class="slick-smaller-item">
     </div>
 
 </section>
 <footer>
-    <p class="footer-text container">© Copyright 2015 <span class="green-text">theHam</span> | All Rights Reserved</p>
+    <p class="footer-text container"> Copyright 2015  <span class="green-text-footer">theHam</span> | All Rights Reserved</p>
 </footer>
 
 <script src="js/jquery.js"></script>
 <script src="js/slick.js"></script>
 <script src="js/script.js"></script>
 <script src="js/script2.js"></script>
-<script src="js/script3.js"></script>
 </body>
 </html>
