--- a/javascript-1/jshomework8/index.html
+++ b/javascript-1/jshomework8/index.html
@@ -7,7 +7,7 @@
 <body>
     <form  class="form">
 
-        <label for="">Enter the Price
+        <label >Enter the Price
         <input type="number" class="text" >
         </label>
     </form>
