--- a/html-css-1/homework7/index.html
+++ b/html-css-1/homework7/index.html
@@ -8,11 +8,16 @@
 <body>
 <div class="container">
     <p class="container-text">
-        <span class="text"> When there is no more hope. When Winter is coming. When the White Walkers prepare to break down the Wall and JAVA c
-an no longer stop them ... <br><br>
-Comes he - Javascript. Lord of untyped data and components, he does not give up technical tasks "to do nicely"
- and is not afraid of calculations on the user side. But he comes not alone, having 3 of
-            his faithful friends with him: jQuery, React.js and Node.js.</span> </p>
+        <span class="text">
+            <span class="episode"> Episode 0</span><br>
+            <span class="episode">Atttack of the frontend</span><br>
+                When there is no more hope. When Winter is coming. When the White Walkers prepare to break down the Wall and JAVA c
+                an no longer stop them ... <br><br>
+                Comes he - Javascript. Lord of untyped data and components, he does not give up technical tasks "to do nicely"
+                 and is not afraid of calculations on the user side. But he comes not alone, having 3 of
+                            his faithful friends with him: jQuery, React.js and Node.js.
+        </span>
+    </p>
 </div>
 
 </body>
