--- a/hwPizza/src/index.html
+++ b/hwPizza/src/index.html
@@ -20,6 +20,16 @@
       <div class="header__nav-bar__menu--line"></div>
       <div class="header__nav-bar__menu--line"></div>
     </div>
+    
+    <ul class="header__nav-bar__900">
+      <a href="#" class="header__nav-bar__900--item">PIZZA DELIVERY</a>
+      <a href="#" class="header__nav-bar__900--item">UI/UX SALADS</a>
+      <a href="#" class="header__nav-bar__900--item">DESSERTS</a>
+      <a href="#" class="header__nav-bar__900--item">ABOUT US</a>
+      <a href="#" class="header__nav-bar__900--item">CONTACTS </a>
+    </ul>
+    <img src="img/navigation-logo@1X.png" alt=""
+         class="header__nav-bar--logo">
   </div>
   <div class="header__slogan">
     <p class="header__slogan--text-first">All we need is Love.</p>
@@ -62,6 +72,140 @@
     </a>
   </div>
 </section>
+
+<section class="priceFirst">
+  <div class="priceFirst__title">
+      <p class="priceFirst__title--text">neque ero ullamcorper sed</p>
+      <p class="priceFirst__title--subtitle">Ultrices cursus sit amet placerat tortor</p>
+  </div>
+    <div class="priceFirst__tincidunt">
+        <p class="priceFirst__tincidunt--text">tincidunt at Mauris</p>
+    </div>
+    <div class="priceFirst__select">
+        <p class="priceFirst__select--text">id hendrerit velit quis</p>
+        <img src="img/Layer%2011%20copy%203@1X.png" alt="" class="priceFirst__select--logo">
+    </div>
+  <div class="priceFirst__list priceFirst__list1">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceFirst__list priceFirst__list2">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceFirst__list priceFirst__list3">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceFirst__list priceFirst__list4">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Non duis dictum eros nec</p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+
+  <div class="priceFirst__select2">
+    <p class="priceFirst__select2--text">id dolor Pellentesque</p>
+    <img src="img/Layer%209%20copy%203@1X.png" alt="" class="priceFirst__select2--logo">
+  </div>
+  <div class="priceFirst__list priceFirst__list1">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceFirst__list priceFirst__list2">
+    <div class="priceFirst__list__txtPrc">
+      <p class="priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="priceFirst__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+</section>
+
+
+<section class="priceSecond">
+  <div class="priceSecond__vestibulum">
+    <p class="priceSecond__vestibulum--text">vestibulum augue et</p>
+  </div>
+  <div class="priceSecond__select">
+    <p class="priceSecond__select--text">augue Proin eleifend</p>
+    <img src="img/Layer%2010%20copy%203@1X.png" alt="" class="priceSecond__select--logo">
+  </div>
+  <div class="priceSecond__list priceFirst__list1">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceSecond__list priceSecond__list2">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceSecond__list priceSecond__list3">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceSecond__list priceSecond__list4">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Non duis dictum eros nec</p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+
+  <div class="priceSecond__select2">
+    <p class="priceSecond__select2--text">pharetra at sit amet sem</p>
+    <img src="img/Layer%208%20copy%203@1X.png" alt="" class="priceSecond__select2--logo">
+  </div>
+  <div class="priceSecond__list priceSecond__list1">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="priceSecond__list priceSecond__list2">
+    <div class="priceSecond__list__txtPrc">
+      <p class="priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+
+</section>
+<footer class="footer">
+  <p class="footer--text1">Best pizza from 2018 year.</p>
+  <p class="footer--text2">New UA/UX salads - not boring, only fun.</p>
+</footer>
 
 <script src="js/script.js"></script>
 </body>
