--- a/hwPizza/src/index.html
+++ b/hwPizza/src/index.html
@@ -41,16 +41,19 @@
 </header>
 
 <section class="content">
-  <div class="content__delivery">
+  <a href="#">
+    <div class="content__delivery">
       <div class="content__delivery__itemText">
           <p class="content__delivery__itemText--text">Pizza Delivery</p>
       </div>
+
     <a href="#" class="content__delivery__itemLink">
       <div class="content__delivery__itemLink--linkText">
         <p >></p>
       </div>
     </a>
   </div>
+  <a href="#">
   <div class="content__salad">
     <div class="content__salad__itemText">
       <p class="content__salad__itemText--text">UA/UX Salads</p>
@@ -61,6 +64,8 @@
       </div>
     </a>
   </div>
+  </a>
+    <a href="#">
   <div class="content__dessert">
     <div class="content__dessert__itemText">
       <p class="content__dessert__itemText--text">Desserts</p>
@@ -71,138 +76,151 @@
       </div>
     </a>
   </div>
+    </a>
 </section>
 
-<section class="priceFirst">
-  <div class="priceFirst__title">
-      <p class="priceFirst__title--text">neque ero ullamcorper sed</p>
-      <p class="priceFirst__title--subtitle">Ultrices cursus sit amet placerat tortor</p>
+<div class="slogan">
+  <div class="slogan__title">
+    <p class="slogan__title--text">neque ero ullamcorper sed</p>
+    <p class="slogan__title--subtitle">Ultrices cursus sit amet placerat tortor</p>
   </div>
-    <div class="priceFirst__tincidunt">
-        <p class="priceFirst__tincidunt--text">tincidunt at Mauris</p>
+  <img src="img/Menu%20logo%20copy@1X.png" alt="" class="slogan--logo">
+</div>
+
+
+<section class="price">
+
+<div class="price__priceFirst">
+
+  <div class="price__priceFirst__tincidunt">
+        <p class="price__priceFirst__tincidunt--text">tincidunt at Mauris</p>
     </div>
-    <div class="priceFirst__select">
-        <p class="priceFirst__select--text">id hendrerit velit quis</p>
-        <img src="img/Layer%2011%20copy%203@1X.png" alt="" class="priceFirst__select--logo">
+    <div class="price__priceFirst__select">
+        <p class="price__priceFirst__select--text">id hendrerit velit quis</p>
+        <img src="img/Layer%2011%20copy%203@1X.png" alt="" class="price__priceFirst__select--logo">
     </div>
-  <div class="priceFirst__list priceFirst__list1">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list priceFirst__list1">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
       eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
   </div>
-  <div class="priceFirst__list priceFirst__list2">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list price__priceFirst__list2">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
       Nam quis nunc et eros mollis facilisis. </p>
   </div>
-  <div class="priceFirst__list priceFirst__list3">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list price__priceFirst__list3">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
       Nam quis nunc et eros mollis facilisis. </p>
   </div>
-  <div class="priceFirst__list priceFirst__list4">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Non duis dictum eros nec</p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list priceFirst__list4">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Non duis dictum eros nec</p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
   </div>
 
-  <div class="priceFirst__select2">
-    <p class="priceFirst__select2--text">id dolor Pellentesque</p>
-    <img src="img/Layer%209%20copy%203@1X.png" alt="" class="priceFirst__select2--logo">
+  <div class="price__priceFirst__select2">
+    <p class="price__priceFirst__select2--text">id dolor Pellentesque</p>
+    <img src="img/Layer%209%20copy%203@1X.png" alt="" class="price__priceFirst__select2--logo">
   </div>
-  <div class="priceFirst__list priceFirst__list1">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list priceFirst__list1">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
       eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
   </div>
-  <div class="priceFirst__list priceFirst__list2">
-    <div class="priceFirst__list__txtPrc">
-      <p class="priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
-      <p class="priceFirst__list__txtPrc--price">$1200</p>
+  <div class="price__priceFirst__list priceFirst__list2">
+    <div class="price__priceFirst__list__txtPrc">
+      <p class="price__priceFirst__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="price__priceFirst__list__txtPrc--price">$1200</p>
     </div>
-    <p class="priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+    <p class="price__priceFirst__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
       Nam quis nunc et eros mollis facilisis. </p>
   </div>
+</div>
+
+
+<div class="price__priceSecond">
+  <div class="price__priceSecond__vestibulum">
+    <p class="price__priceSecond__vestibulum--text">vestibulum augue et</p>
+  </div>
+  <div class="price__priceSecond__select">
+    <p class="price__priceSecond__select--text">augue Proin eleifend</p>
+    <img src="img/Layer%2010%20copy%203@1X.png" alt="" class="price__priceSecond__select--logo">
+  </div>
+  <div class="price__priceSecond__list price__priceFirst__list1">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="price__priceSecond__list price__priceSecond__list2">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="price__priceSecond__list price__priceSecond__list3">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="price__priceSecond__list price__priceSecond__list4">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Non duis dictum eros nec</p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+
+  <div class="price__priceSecond__select2">
+    <p class="price__priceSecond__select2--text">pharetra at sit amet sem</p>
+    <img src="img/Layer%208%20copy%203@1X.png" alt="" class="price__priceSecond__select2--logo">
+  </div>
+  <div class="price__priceSecond__list price__priceSecond__list1">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
+      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+  <div class="price__priceSecond__list priceSecond__list2">
+    <div class="price__priceSecond__list__txtPrc">
+      <p class="price__priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
+      <p class="price__priceSecond__list__txtPrc--price">$1200</p>
+    </div>
+    <p class="price__priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
+      Nam quis nunc et eros mollis facilisis. </p>
+  </div>
+
+</div>
 </section>
 
-
-<section class="priceSecond">
-  <div class="priceSecond__vestibulum">
-    <p class="priceSecond__vestibulum--text">vestibulum augue et</p>
-  </div>
-  <div class="priceSecond__select">
-    <p class="priceSecond__select--text">augue Proin eleifend</p>
-    <img src="img/Layer%2010%20copy%203@1X.png" alt="" class="priceSecond__select--logo">
-  </div>
-  <div class="priceSecond__list priceFirst__list1">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
-      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-  <div class="priceSecond__list priceSecond__list2">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
-      Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-  <div class="priceSecond__list priceSecond__list3">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Eu dolor accumsan pharetra</p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
-      Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-  <div class="priceSecond__list priceSecond__list4">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Non duis dictum eros nec</p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-
-  <div class="priceSecond__select2">
-    <p class="priceSecond__select2--text">pharetra at sit amet sem</p>
-    <img src="img/Layer%208%20copy%203@1X.png" alt="" class="priceSecond__select2--logo">
-  </div>
-  <div class="priceSecond__list priceSecond__list1">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Lass aptent taciti </p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue
-      eget tortor dolor. Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-  <div class="priceSecond__list priceSecond__list2">
-    <div class="priceSecond__list__txtPrc">
-      <p class="priceSecond__list__txtPrc--text">· Nec fermentum nibh</p>
-      <p class="priceSecond__list__txtPrc--price">$1200</p>
-    </div>
-    <p class="priceSecond__list--text">Praesent hendrerit massa ut libero bibendum pulvinar. Pellenteue eget tortor dolor.
-      Nam quis nunc et eros mollis facilisis. </p>
-  </div>
-
-</section>
 <footer class="footer">
+  <img src="img/navigation-logo@1X.png" alt=""
+       class="footer--logo">
   <p class="footer--text1">Best pizza from 2018 year.</p>
   <p class="footer--text2">New UA/UX salads - not boring, only fun.</p>
 </footer>
